agrego autenticación por Bearer desde swagger
