# swagger.yaml
@@ -14,6 +14,16 @@ tags:
     description: "Operaciones relacionadas con los materiales"
   - name: "Depósitos"
     description: "Operaciones relacionadas con los depósitos"
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      in: header
+      bearerFormat: JWT
+security:
+  - bearerAuth: []
+
 paths:
   /api/users/login:
     post:
